# confluence2eml

./: .gitignore  README.md  confluence2eml.py  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: python-style.mdc
confluence2eml/: __init__.py  client.py  main.py
confluence2eml/core/: __init__.py  client.py  css_inliner.py  html_processor.py  image_processor.py  markdown_processor.py  mime_generator.py  utils.py
confluence2eml/core/resources/: __init__.py  email_styles.css
docs/: project_plan.md
tests/: __init__.py  conftest.py  test_confluence_client.py  test_css_inliner.py  test_fixtures.py  test_html_processor.py  test_image_processor.py  test_integration.py  test_main_cli.py  test_markdown_processor.py  test_markdown_saving_integration.py  test_mime_generator.py  test_project_structure.py  test_url_resolver.py  test_utils.py
tests/fixtures/: __init__.py  confluence_api_response.json  sample_page.html
