[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confluence2eml"
version = "0.1.0"
description = "Convert Atlassian Confluence pages to self-contained Microsoft Outlook email files (.EML format)"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Confluence2EML Contributors"}
]
keywords = ["confluence", "email", "eml", "outlook", "export", "atlassian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Confluence API client and content extraction
    "confluence-markdown-exporter>=0.1.0",
    # Markdown to HTML conversion
    "markdown>=3.4.0",
    # HTML parsing and sanitization
    "beautifulsoup4>=4.12.0",
    # CSS inlining for email client compatibility
    "premailer>=3.10.0",
    # HTTP client for downloading images and attachments
    # (Required for future image embedding and attachment processing features)
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]

[project.scripts]
confluence2eml = "confluence2eml.main:main"

[tool.setuptools]
packages = ["confluence2eml"]

[tool.setuptools.package-data]
confluence2eml = ["core/resources/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--verbose",
    "--tb=short",
    "--strict-config",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for complete workflows",
    "slow: Tests that take a long time to run",
]

[tool.coverage.run]
source = ["confluence2eml"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
precision = 2
skip_covered = false

